--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/chatbot/favicon.ico"><title>ChatBot</title><link href="/chatbot/css/app.65eaae59.css" rel="preload" as="style"><link href="/chatbot/css/chunk-vendors.7ec69f7f.css" rel="preload" as="style"><link href="/chatbot/js/app.84e6d8a1.js" rel="preload" as="script"><link href="/chatbot/js/chunk-vendors.e94b5be1.js" rel="preload" as="script"><link href="/chatbot/css/chunk-vendors.7ec69f7f.css" rel="stylesheet"><link href="/chatbot/css/app.65eaae59.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but ChatBot doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/chatbot/js/chunk-vendors.e94b5be1.js"></script><script src="/chatbot/js/app.84e6d8a1.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="/favicon.ico">
+    <title>ChatBot</title>
+    <link href="/chatbot/css/app.65eaae59.css" rel="preload" as="style">
+    <link href="/chatbot/css/chunk-vendors.55204a1e.css" rel="preload" as="style">
+    <link href="/chatbot/js/app.bfd3d9fd.js" rel="preload" as="script">
+    <link href="/chatbot/js/chunk-vendors.fac0bcf7.js" rel="preload" as="script">
+    <link href="/chatbot/css/chunk-vendors.55204a1e.css" rel="stylesheet">
+    <link href="/chatbot/css/app.65eaae59.css" rel="stylesheet">
+</head>
+
+<body><noscript><strong>We're sorry but ChatBot doesn't work properly without JavaScript enabled. Please enable it to
+            continue.</strong></noscript>
+    <div id="app"></div>
+    <script src="/chatbot/js/chunk-vendors.fac0bcf7.js"></script>
+    <script src="/chatbot/js/app.bfd3d9fd.js"></script>
+</body>
+
+</html>
