--- a/index.html
+++ b/index.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" href="/chatbot/favicon.ico">
-    <title>ChatBot</title>
-    <link href="/chatbot/css/app.37679391.css" rel="preload" as="style">
-    <link href="/chatbot/css/chunk-vendors.7ec69f7f.css" rel="preload" as="style">
-    <link href="/chatbot/js/app.ad789227.js" rel="preload" as="script">
-    <link href="/chatbot/js/chunk-vendors.63ea6f96.js" rel="preload" as="script">
-    <link href="/chatbot/css/chunk-vendors.7ec69f7f.css" rel="stylesheet">
-    <link href="/chatbot/css/app.37679391.css" rel="stylesheet">
-</head>
-
-<body><noscript><strong>We're sorry but ChatBot doesn't work properly without JavaScript enabled. Please enable it to
-            continue.</strong></noscript>
-    <div id="app"></div>
-    <script src="/chatbot/js/chunk-vendors.63ea6f96.js"></script>
-    <script src="/chatbot/js/app.ad789227.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/chatbot/favicon.ico"><title>ChatBot</title><link href="/chatbot/css/app.4f1dda16.css" rel="preload" as="style"><link href="/chatbot/css/chunk-vendors.7ec69f7f.css" rel="preload" as="style"><link href="/chatbot/js/app.32a9ce63.js" rel="preload" as="script"><link href="/chatbot/js/chunk-vendors.63ea6f96.js" rel="preload" as="script"><link href="/chatbot/css/chunk-vendors.7ec69f7f.css" rel="stylesheet"><link href="/chatbot/css/app.4f1dda16.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but ChatBot doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/chatbot/js/chunk-vendors.63ea6f96.js"></script><script src="/chatbot/js/app.32a9ce63.js"></script></body></html>
